* Use tubeconn from sugar.presence
* #3138: Apply sugar.graphics API change (morgs)
* Remove self.set_title - allows title to be changed (morgs)

6

* Re-enable lesson plans (morgs)

5

* Add tubeconn.py - required for sharing (morgs)

4

* Better icon since it is displayed in the mesh view
* Mesh collaboration functionality