@@ -1,4 +1,5 @@
-* Use tubeconn from sugar.presence
+* #3791: Tubes API change (morgs)
+* Use tubeconn from sugar.presence (morgs)
 * #3138: Apply sugar.graphics API change (morgs)
 * Remove self.set_title - allows title to be changed (morgs)
 
